--- a/L2A/L2A.csproj
+++ b/L2A/L2A.csproj
@@ -65,6 +65,8 @@
     <Compile Include="DAO\Service\FileHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario.cs" />
+    <Compile Include="video.cs" />
     <Compile Include="View\Login.cs">
       <SubType>Form</SubType>
     </Compile>
