--- a/L2A/L2A.csproj
+++ b/L2A/L2A.csproj
@@ -77,19 +77,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\UsuarioController.cs" />
     <Compile Include="DAO\Service\FileHelper.cs" />
     <Compile Include="DAO\UsuarioDao.cs" />
+    <Compile Include="DAO\VideoDAO.cs" />
     <Compile Include="Model\Categoria.cs" />
     <Compile Include="Model\Comentario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Usuario.cs" />
     <Compile Include="Model\video.cs" />
+    <Compile Include="View\Cadastro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Cadastro.Designer.cs">
+      <DependentUpon>Cadastro.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Restrito\VideView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Restrito\VideView.Designer.cs">
+      <DependentUpon>VideView.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,8 +114,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\Cadastro.resx">
+      <DependentUpon>Cadastro.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Restrito\VideView.resx">
+      <DependentUpon>VideView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -118,7 +138,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controller\" />
     <Folder Include="Static\" />
   </ItemGroup>
   <ItemGroup>
